tests/fixtures/errors/reserved_name.z
# E0033: a reserved keyword used where a declaration name is expected.
f: function {unit: i64} out i64 is {
    return 0
}
